[gd_scene load_steps=6 format=3 uid="uid://bub5q0lgkuqhd"]

[ext_resource type="Script" path="res://Scripts/G1Main.gd" id="1_2mglc"]
[ext_resource type="PackedScene" uid="uid://jh7fdfn2kuw5" path="res://Scenes/G1Stick.tscn" id="2_pudfk"]
[ext_resource type="PackedScene" uid="uid://bdwgi8uw3ov3d" path="res://Scenes/G1Sphere.tscn" id="3_2gjcw"]
[ext_resource type="PackedScene" uid="uid://cy63qu2p0ub03" path="res://Scenes/GameOver.tscn" id="4_34b3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8w7fy"]
bg_color = Color(1, 0.235294, 0.67451, 1)

[node name="G1Main" type="Node"]
script = ExtResource("1_2mglc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 322)

[node name="Panel" type="Panel" parent="."]
offset_left = -6.0
offset_top = -12.0
offset_right = 1162.0
offset_bottom = 660.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8w7fy")

[node name="G1Stick" parent="." instance=ExtResource("2_pudfk")]
position = Vector2(580, 392)
rotation = -0.0872665

[node name="G1Sphere" parent="." instance=ExtResource("3_2gjcw")]
position = Vector2(582, 236)

[node name="Game Over" parent="." instance=ExtResource("4_34b3n")]
process_mode = 2

[connection signal="restart" from="Game Over" to="." method="_on_game_over_restart"]
